--- a/navigation/package.xml
+++ b/navigation/package.xml
@@ -9,7 +9,9 @@
 
   <depend>roscpp</depend>
   <depend>geometry_msgs</depend>
-  <depend>turtlebot3_navigation</depend>
+
+  <exec_depend>turtlebot3_navigation</exec_depend>
+
   <buildtool_depend>catkin</buildtool_depend>
 
   <export>
