[Task 2.2] Added controller dependency on other packages

--- a/controller/package.xml
+++ b/controller/package.xml
@@ -8,6 +8,8 @@
   <license>MIT</license>
 
   <depend>roscpp</depend>
+  <depend>navigation</depend>
+  <depend>perception</depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 
