--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
     - server_type: travis
     - ros_release_name: melodic
     - ubuntu_version_name: bionic
-    - used_modules: check_cache,check_build,code_style_check,check_install,code_coverage
+    - used_modules: check_cache,check_build,check_install,code_coverage
     - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
 
 script:
