--- a/controller/package.xml
+++ b/controller/package.xml
@@ -10,6 +10,9 @@
   <depend>roscpp</depend>
   <depend>navigation</depend>
   <depend>perception</depend>
+  <depend>genmsg</depend>
+  <depend>actionlib</depend>
+  <depend>actionlib_msgs</depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 
