[Task 2.1] Updated CMakeLists and test launcher for navigation.

--- a/navigation/CMakeLists.txt
+++ b/navigation/CMakeLists.txt
@@ -42,8 +42,21 @@ target_link_libraries(${PROJECT_NAME}_node
 ## Testing ##
 #############
 
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_navigation.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+
+  add_rostest_gtest(
+  navigation_test
+  test/navigation_test.launch
+  test/navigation_test.cpp
+  )
+  target_link_libraries(
+  navigation_test
+  ${catkin_LIBRARIES}
+  )
+  add_dependencies(
+  navigation_test
+  navigation_node
+  ${catkin_EXPORTED_TARGETS}
+  )
+endif()
