--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "darknet_ros"]
 	path = darknet_ros
-	url = git@github.com:leggedrobotics/darknet_ros.git
+	url = https://github.com/leggedrobotics/darknet_ros.git
