[Task 2.1] Draft test for Navigation

--- a/navigation/CMakeLists.txt
+++ b/navigation/CMakeLists.txt
@@ -78,6 +78,7 @@ if(CATKIN_ENABLE_TESTING)
   navigation_test
   test/navigation_test.launch
   test/navigation_test.cpp
+  src/navigation.cpp
   )
   target_link_libraries(
   navigation_test
