--- a/controller/CMakeLists.txt
+++ b/controller/CMakeLists.txt
@@ -76,6 +76,7 @@ set(SRC_FILES
   src/user_panel.cpp
 )
 add_library(${PROJECT_NAME} ${SRC_FILES})
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${catkin_LIBRARIES})
 
 add_executable(${PROJECT_NAME}_node src/controller_node.cpp src/controller.cpp)
