--- a/controller/CMakeLists.txt
+++ b/controller/CMakeLists.txt
@@ -97,6 +97,7 @@ if(CATKIN_ENABLE_TESTING)
   test/controller_test.launch
   test/controller_test.cpp
   src/controller.cpp
+  action/SetMode.action
   )
 
   target_link_libraries(
