--- a/perception/CMakeLists.txt
+++ b/perception/CMakeLists.txt
@@ -38,7 +38,7 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(${PROJECT_NAME}_node src/perception_node.cpp src/perception.cpp)
+add_executable(${PROJECT_NAME}_node src/perception_node.cpp src/matrixf.cpp src/perception.cpp src/yolo_ros.cpp)
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME}_node
   ${catkin_LIBRARIES}
