[Task 3.4] Adding dependency on darknet_ros_msgs.

--- a/perception/package.xml
+++ b/perception/package.xml
@@ -9,6 +9,7 @@
 
   <depend>roscpp</depend>
   <depend>libopencv-dev</depend>
+  <depend>darknet_ros_msgs</depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 
