--- a/perception/package.xml
+++ b/perception/package.xml
@@ -9,7 +9,11 @@
 
   <depend>roscpp</depend>
   <depend>libopencv-dev</depend>
+  <depend>cv_bridge</depend>
+  <depend>image_transport</depend>
   <depend>darknet_ros_msgs</depend>
+  <depend>message_generation</depend>
+  <depend>message_runtime</depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 
