--- a/perception/CMakeLists.txt
+++ b/perception/CMakeLists.txt
@@ -66,7 +66,7 @@ target_link_libraries(${PROJECT_NAME}_node
 
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
-
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 --coverage") # Enable code coverage
   add_rostest_gtest(
   perception_test
   test/perception_test.launch
