--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,23 @@
-sudo: required
+image: ros:melodic-ros-core
 
-language: cpp
+cache:
+  paths:
+    - ccache/
 
-services:
-  - docker
-
-before_install:
+before_script:
+  - apt update >/dev/null && apt install -y git >/dev/null
+  - mkdir /catkin_ws/src -p && cd /catkin_ws/src
+  - git clone https://github.com/danielmohansahu/cleanup-robot.git --recursive
+  - cd .. && rosdep update && rosdep install --from-paths src/ -iy
   - pip install --user cpp-coveralls
   - gem install coveralls-lcov
 
 after_success:
   - coveralls --root .. --build-root . --verbose
 
-env:
-  global:
-    - toolset_branch: master
-    - server_type: travis
-    - ros_release_name: melodic
-    - ubuntu_version_name: bionic
-    - used_modules: check_cache,check_build,check_install,code_coverage
-    - remote_shell_script: 'https://raw.githubusercontent.com/shadow-robot/sr-build-tools/$toolset_branch/bin/sr-run-ci-build.sh'
-
-script:
-  - curl -s "$( echo "$remote_shell_script" | sed 's/#/%23/g' )" | bash -x /dev/stdin "$toolset_branch" $server_type $used_modules
-
+catkin_make:
+  stage: build
+  script:
+    - cd /catkin_ws
+    - catkin_make
+    - catkin_make run_tests
