[Task 2.7] Added missing rosdep installation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu bionic main" > /etc/apt/sources.list.d/ros-latest.list'
   - sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
   - sudo apt-get update -qq
-  - sudo apt install ros-melodic-ros-base
+  - sudo apt install ros-melodic-ros-base python-rosdep
   - source /opt/ros/melodic/setup.bash
   - sudo rosdep init
   - rosdep update
