[Task 2.7] Removed coverage (causing the build to fail).

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ jobs:
       - catkin_make
       - catkin_make run_tests -j1
 
-after_success:
-  - coveralls --root .. --build-root . --verbose
+# after_success:
+# - coveralls --root .. --build-root . --verbose
